2009-12-18  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Add a useProxiedOpenPanel WebPreference and tunnel it through to the plug-in host.

        * Plugins/Hosted/NetscapePluginHostManager.h:
        * Plugins/Hosted/NetscapePluginHostManager.mm:
        (WebKit::NetscapePluginHostManager::hostForPackage):
        (WebKit::NetscapePluginHostManager::spawnPluginHost):
        (WebKit::NetscapePluginHostManager::instantiatePlugin):
        * WebView/WebPreferenceKeysPrivate.h:
        * WebView/WebPreferences.mm:
        (+[WebPreferences initialize]):
        (-[WebPreferences usesProxiedOpenPanel]):
        (-[WebPreferences setUsesProxiedOpenPanel:]):
        * WebView/WebPreferencesPrivate.h:

2009-12-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Update WebKitSystemInterface for <rdar://problem/7237059>.        

        * WebCoreSupport/WebSystemInterface.m:
        (InitWebCoreSystemInterface):

2009-12-18  Adam Roben  <aroben@apple.com>

        Add #includes needed after WebCore clean-up

        Rubber-stamped by Anders Carlsson.

        Fixes <http://webkit.org/b/32718>.

        * WebView/WebFrame.mm:
        * WebView/WebFrameView.mm:
        * WebView/WebView.mm:

2009-12-17  Adam Roben  <aroben@apple.com>

        Mac build fix

        * WebView/WebVideoFullscreenController.mm: Added now-needed #import.

2009-12-13  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=32499
        Add client based Geolocation provider

        Add first cut of a client based Geolocation provider. This is guarded by
        ENABLE(CLIENT_BASED_GEOLOCATION) and is off by default for now. This adds a
        GeolocationControllerClient interface that no-one currently implements,
        but will in a subsequent patch.

        * WebView/WebView.mm: